--- a/src/Components/Authentication/ForgotPassword.module.css
+++ b/src/Components/Authentication/ForgotPassword.module.css
@@ -13,9 +13,52 @@
     width: 320px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    text-align: center;
+}
+.forget p{
+    margin-bottom: 2rem;
 }
 .forget-control label{
     display: block;
-    align-items: self-start;
+}
+.forget-control input {
+    padding: 5px;
+    width: 80%;
+    margin: 5px 0 20px 0;
+}
+
+.reset-btn{
+    margin: 5px 0 5px 0;
+    width: 85%;
+    padding: 8px;
+    background-color: #7561AD;
+    border: none;
+    color: white;
+    border-radius: 3px;
+    cursor: pointer;
+
+}
+.forget h6{
+    text-align: center;
+    font-weight: lighter;
+    margin: 3px;
+}
+.login_back-btn{
+    margin: 5px 0 5px 0;
+    width: 85%;
+    padding: 8px;
+    border: solid 1px #d5d4d4;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.login_back-btn:hover {
+    background-color: #F1F5F9;
+    border-color: #FF4747;
+}
+.reset-btn:hover{
+    background-color: #715bac;
+}
+.forget-control input:focus {
+    border: 1px solid rgb(69, 65, 65);
+    outline: none;
 }
