--- a/src/Components/Expenses/Home.module.css
+++ b/src/Components/Expenses/Home.module.css
@@ -74,3 +74,16 @@ margin-top: 4rem;
 .floating-btn:hover {
     transform: scale(1.1);
 }
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* translucent background */
+    display: flex;
+    align-items: flex-end;
+    /* so form stays at bottom */
+    z-index: 999;
+    /* above everything else */
+}
