--- a/src/Components/Expenses/ExpenseList.module.css
+++ b/src/Components/Expenses/ExpenseList.module.css
@@ -3,7 +3,18 @@
     padding: 0;
     margin: 0;
 }
-
+.list-heading{
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem;
+}
+.premium{
+    padding: 5px;
+    background-color: rgb(57, 47, 255);
+    border: none;
+    color: white;
+    border-radius: 3px;
+}
 .expense-item {
     display: flex;
     flex-direction: column;
@@ -45,59 +56,9 @@
     color: crimson;
 }
 
-.form-container {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background: #f0f8ff;
-    padding: 20px;
-    box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.2);
-    transition: bottom 0.3s ease-in-out;
-    z-index: 10000;
-}
 
-.form-container.active {
-    bottom: 0;
-}
 
-.form-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem;
-}
 
-.edit-form {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
 
-.input-group {
-    width: 30%;
-    margin: 5px;
-    padding: 5px;
-}
 
-.submit-btn {
-    width: auto;
-    padding: 10px 20px;
-    background: #4caf50;
-    color: white;
-    border: none;
-    cursor: pointer;
-    margin-right: 3rem;
-    display: block;
-    margin-left: auto;
-}
 
-.cancel-btn {
-    padding: 10px 20px;
-    background: #f44336;
-    color: white;
-    border: none;
-    cursor: pointer;
-    margin: 1rem auto 0;
-    display: block;
-}
