--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@
   margin: 0;
   padding: 0;
 }
+body.light {
+  background-color: #fff;
+  color: #000;
+}
+
+body.dark {
+  background-color: #121212;
+  color: #f5f5f5;
+}
