--- a/src/Components/Authentication/Authentication.module.css
+++ b/src/Components/Authentication/Authentication.module.css
@@ -8,29 +8,27 @@
         align-content: center;
         background: linear-gradient(to bottom right, white, #0057b3);
 }
-.heading{
-    color: #0057b3;
-    text-align: center;
-    margin: 2rem;
-}
-.auth    {
+.section{
     background: white;
-    padding: 30px;
-    width: 320px;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    text-align: center;
+        padding: 30px;
+        width: 320px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+.heading{
+    margin-bottom: 2rem;
+    
 }
 
+.control label{
+    display: block;
+}
 .control input {
-    width: 90%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    background-color: white;
-    color: black;
+    width: 100%;
+    padding: 8px 40px 8px 10px;
+    box-sizing: border-box;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .control input::placeholder {
@@ -39,28 +37,29 @@
 }
 
 .control input:focus::placeholder {
-    transform: translateY(-12px);
-    font-size: 12px;
+    transform: translateY(-10px);
+    font-size: 10px;
 }
 .control input:focus {
-    border: 2px solid #8d9cad;
-    outline: none;
-    background-color: #c2d0e0;
+    border: 1px solid rgb(69, 65, 65);
+        outline: none;
 }
 
 .sign {
     width: 100%;
-    padding: 10px;
-    background: #0096ff;
+    padding: 6px;
+    margin-top: 0.5rem;
+    background: #6650A4;
     color: white;
     border: none;
-    border-radius: 40px;
+    border-radius: 3px;
     cursor: pointer;
     font-size: 16px;
+    box-sizing: border-box;
 }
 
 .sign:hover {
-    background: #007acc;
+    background: #5d41b1;
 }
 .toggle{
     width: 100%;
@@ -78,11 +77,23 @@
 .toggle:hover {
     background: #B2E8B8;
 }
-
-.control{
-    display: flex;
-    align-items: center;
+.showPassIcon {
+    position: absolute;
+    right: 20px;
+    /* increased from 12px */
+    top: 60%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 18px;
+    color: #555;
 }
+.forgotPassword{
+    margin-top: 5px;
+    color: #555;
+    
+
+}
+
 
 
 p {
@@ -90,11 +101,4 @@ p {
     margin-top: 15px;
 }
 
-a {
-    color: #0096ff;
-    text-decoration: none;
-}
 
-a:hover {
-    text-decoration: underline;
-}
