--- a/src/Components/Expenses/Home.module.css
+++ b/src/Components/Expenses/Home.module.css
@@ -91,7 +91,7 @@ margin-top: 4rem;
     color: white;
     border: none;
     padding: 0.5rem 1.2rem;
-    margin-right: 1rem;
+    margin: 0.25rem;
     border-radius: 8px;
     cursor: pointer;
     font-weight: 500;
